# INF573_vegetalisation

./: .gitignore  README.md  pyproject.toml
CNN/: model.py  utils_cnn.py
count/: README.md  data.py  display.py  processing.py  test_model.ipynb  vrac.ipynb
data_sample/img/: IMG_004142.tif  IMG_020484.tif  IMG_086404.tif
data_sample/model_img/: IMG_083263.tif  IMG_083264.tif  IMG_083265.tif  IMG_083266.tif  IMG_083267.tif  IMG_083268.tif  IMG_083269.tif
data_sample/model_pred/: PRED_083263.tif  PRED_083264.tif  PRED_083265.tif  PRED_083266.tif  PRED_083267.tif  PRED_083268.tif  PRED_083269.tif
data_sample/msk/: MSK_004142.tif  MSK_020484.tif
data_sample/predictions/: PRED_086404.tif
